Ajuste teste gateway menuitem